--- a/src/main/resources/sample/registerScene.fxml
+++ b/src/main/resources/sample/registerScene.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Hyperlink?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.effect.DropShadow?>
@@ -17,7 +18,7 @@
          <children>
             <ImageView fitHeight="187.0" fitWidth="158.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@static/images/icon-removebg.png" />
+                  <Image url="@icon-removebg.png" />
                </image>
                <effect>
                   <DropShadow>
@@ -27,11 +28,12 @@
                   </DropShadow>
                </effect>
             </ImageView>
+            <TextField fx:id="emailField" alignment="CENTER" promptText="email" />
             <PasswordField fx:id="passwordField1" alignment="CENTER" promptText="password" />
             <PasswordField fx:id="passwordField2" alignment="CENTER" promptText="repeat password" />
-            <TextField fx:id="emailField" alignment="CENTER" promptText="email" />
             <Button alignment="CENTER" mnemonicParsing="false" onAction="#register" text="register" />
             <Hyperlink onAction="#OpenLoginScene" text="Already have an account? Sign In" />
+            <Label fx:id="errorLabel" />
          </children>
       </VBox>
    </children>
