--- a/src/main/resources/sample/chatter.fxml
+++ b/src/main/resources/sample/chatter.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.effect.DropShadow?>
@@ -36,13 +37,20 @@
                      <children>
                         <Button alignment="CENTER" mnemonicParsing="false" onAction="#sendMessage" text="Send" />
                         <Button alignment="CENTER" mnemonicParsing="false" onAction="#logOut" text="Log out" />
+                        <Button fx:id="refreshButton" mnemonicParsing="false" onAction="#downloadMessagesForCurrentSelectedReceiver" text="Refresh" />
                      </children>
                   </HBox>
+                  <Label fx:id="errorLabel" />
                </children>
             </VBox>
             <VBox alignment="CENTER">
                <children>
-                  <ComboBox fx:id="friendBox" prefHeight="26.0" prefWidth="197.0" promptText="Choose Friend" />
+                  <HBox>
+                     <children>
+                        <ComboBox fx:id="friendBox" prefHeight="26.0" prefWidth="197.0" promptText="Choose Friend" />
+                        <Label fx:id="loggedAsLabel" text="Label" />
+                     </children>
+                  </HBox>
                </children>
             </VBox>
             <ListView fx:id="textMessages" prefHeight="248.0" prefWidth="395.0" GridPane.rowIndex="1" />
@@ -52,7 +60,7 @@
                <children>
                   <ImageView fitHeight="69.0" fitWidth="75.0" nodeOrientation="RIGHT_TO_LEFT" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@static/images/icon-removebg.png" />
+                        <Image url="@icon-removebg.png" />
                      </image>
                      <effect>
                         <DropShadow>
